@@ -1,29 +1,30 @@
 package pl.bgnat.master.xsnts.topicmodeling.strategy;
 
+import com.fasterxml.jackson.core.JsonProcessingException;
+import com.fasterxml.jackson.core.type.TypeReference;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Component;
+import org.springframework.util.StringUtils;
 import pl.bgnat.master.xsnts.normalization.model.ProcessedTweet;
 
 import java.util.*;
-import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 
-import static org.mapstruct.ap.internal.util.Strings.isEmpty;
-
 /**
  * Grupuje tweety według hashtagów (bez znaku #, małe litery).
- *  • Hashtagi krótsze niż 3 znaki są ignorowane.
- *  • Tweety bez hashtagów trafiają do grup autora, jeżeli autor ma ≥ minAuthorGroup.
+ * • Hashtagi krótsze niż 2 znaki są ignorowane.
+ * • Tweety bez hashtagów trafiają do grup autora, jeżeli autor ma ≥ minAuthorGroup.
  */
 @Slf4j
 @Component
 @RequiredArgsConstructor
 public class HashtagPoolingStrategy implements TweetPoolingStrategy {
-    // pattern na 3 znakowe hasztagi aby uniknąć np: #pl, #uk, #nl, #ok ktore mogą generować szum
+    // Dozwolone hashtagi: #litera(min. 2 znaki po #)
     private static final Pattern HASH = Pattern.compile("#\\p{L}[\\p{L}\\p{N}_]{2,}");
-
+    private final ObjectMapper objectMapper;
     private final int minAuthorGroup = 3;
 
     @Override
@@ -32,22 +33,28 @@ public class HashtagPoolingStrategy implements TweetPoolingStrategy {
     }
 
     @Override
-    public Map<String, List<ProcessedTweet>> poolTweets(List<ProcessedTweet> tweets) {
+    public Map<String, List<ProcessedTweet>> poolTweets(
+            List<ProcessedTweet> tweets) {
 
         Map<String, List<ProcessedTweet>> groups = new HashMap<>();
         List<ProcessedTweet> noHash = new ArrayList<>();
 
         for (ProcessedTweet pt : tweets) {
+            Set<String> tags = extractFromTokens(pt.getTokens());
 
-            Set<String> tags = extract(pt.getNormalizedContent());
-
-            if (tags.isEmpty()) noHash.add(pt);
-            else tags.forEach(tag ->
-                    groups.computeIfAbsent(tag, k -> new ArrayList<>()).add(pt));
+            if (tags.isEmpty()) {
+                noHash.add(pt);
+            } else {
+                for (String tag : tags) {
+                    groups.computeIfAbsent(tag, k -> new ArrayList<>()).add(pt);
+                }
+            }
         }
 
-        // fallback — grupowanie wg autora
-        Map<String, List<ProcessedTweet>> authors = noHash.stream().collect(Collectors.groupingBy(t -> t.getOriginalTweet().getUsername()));
+        // Fallback — grupowanie wg autora
+        Map<String, List<ProcessedTweet>> authors = noHash.stream()
+                .collect(Collectors.groupingBy(pt ->
+                        pt.getOriginalTweet().getUsername()));
 
         authors.forEach((user, list) -> {
             if (list.size() >= minAuthorGroup) {
@@ -55,15 +62,33 @@ public class HashtagPoolingStrategy implements TweetPoolingStrategy {
             }
         });
 
-        log.info("Pooling zakończony: {} grup hashtagów, {} tweetów bez hashtaga.", groups.size(), noHash.size());
+        log.info("Pooling zakończony: {} grup hashtagów.", groups.size());
         return groups;
     }
 
-    private Set<String> extract(String content) {
-        if (isEmpty(content)) return Set.of();
-        Matcher m = HASH.matcher(content);
-        Set<String> tags = new HashSet<>();
-        while (m.find()) tags.add(m.group().substring(1).toLowerCase());
-        return tags;
+    /**
+     * Wyszukuje poprawne hashtagi tylko wśród tokenów (każdy token z osobna).
+     * Tokeny są przekazywane jako string w formacie np. ["#tag1","słowo","#tag2"]
+     */
+    private Set<String> extractFromTokens(String tokensField) {
+        if (!StringUtils.hasLength(tokensField)) return Collections.emptySet();
+
+        try {
+            List<String> tokens = objectMapper.readValue(tokensField,
+                    new TypeReference<>() {});
+
+            Set<String> tags = new HashSet<>();
+
+            for (String token : tokens) {
+                String trimmed = token.trim();
+                if (HASH.matcher(trimmed).matches()) {
+                    tags.add(trimmed.substring(1).toLowerCase()); // bez #
+                }
+            }
+            return tags;
+        } catch (JsonProcessingException e) {
+            log.warn("Błąd brak tokenów.");
+            return Collections.emptySet();
+        }
     }
 }
